[package]
name = "luacjson"
version = "0.1.2"
authors = [ "tickbh <tickdream125@hotmail.com>" ]
description = "extend for Lua 5.3"
repository = "https://github.com/tickbh/td_rlua"
build = "build.rs"
links = "luacjson"
license = "MIT/Apache-2.0"

[build-dependencies]
pkg-config = "0.3"
gcc = "0.3"

[dependencies]
libc = "^0.2"
td_rlua = "0.2.2"
