[package]
name = "luasocket"
version = "0.1.10"
authors = ["tickbh"]
description = "luasocket Bindings for Lua 5.3"
repository = "https://github.com/tickbh/td_rlua"
build = "build.rs"
links = "luasocket"
license = "MIT/Apache-2.0"

[build-dependencies]
pkg-config = "0.3"
gcc = "0.3"

[dependencies]
libc = "^0.2"
td_rlua = "0.3.0"
