[package]
name = "td_rlua"
version = "0.1.0"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "Zero-cost high-level lua 5.3 wrapper for Rust"
repository = "https://github.com/tickbh/td_rlua"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["lua", "wrapper"]
[dependencies]
libc = "*"

[dependencies.td_clua]
version = "*"
path = "../td_clua"

