[package]
name = "td_rlua"
version = "0.1.1"
authors = [ "tickbh <tickdream125@hotmail.com>" ]
description = "Zero-cost high-level lua 5.3 wrapper for Rust"
repository = "https://github.com/tickbh/td_rlua"
license = "MIT/Apache-2.0"
keywords = ["lua", "wrapper"]
[dependencies]
libc = "^0.2.1"

[dependencies.td_clua]
version = "0.1.0"
path = "../td_clua"

